--- a/Resources/Prototypes/_EinsteinEngines/Entities/Mobs/Customization/bishop.yml
+++ b/Resources/Prototypes/_EinsteinEngines/Entities/Mobs/Customization/bishop.yml
@@ -59,6 +59,7 @@
   - HumanoidFoxes
   - Reptilian
   - Feroxi # Flooftier
+  - Tajaran #EE
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/bishop/bishop_main.rsi
     state: l_arm-primary
@@ -84,6 +85,7 @@
   - HumanoidFoxes
   - Reptilian
   - Feroxi # Flooftier
+  - Tajaran # EE
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/bishop/bishop_main.rsi
     state: l_hand
@@ -105,6 +107,7 @@
   - HumanoidFoxes
   - Reptilian
   - Feroxi # Flooftier
+  - Tajaran # EE
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/bishop/bishop_main.rsi
     state: l_leg-primary
@@ -117,7 +120,7 @@
   bodyPart: LFoot
   markingCategory: BaseLFoot
   kindAllowance: [BasicHumanlike, BasicFurry]
-  speciesRestriction: [IPC, Moth, Dwarf, Human, Arachnid, Felinid, Oni, Vulpkanin, HumanoidFoxes, Reptilian, Feroxi]
+  speciesRestriction: [IPC, Moth, Dwarf, Human, Arachnid, Felinid, Oni, Vulpkanin, HumanoidFoxes, Reptilian, Feroxi, Tajaran]
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/bishop/bishop_main.rsi
     state: l_foot
@@ -129,7 +132,7 @@
   bodyPart: RArm
   markingCategory: BaseRArm
   kindAllowance: [BasicHumanlike, BasicFurry]
-  speciesRestriction: [IPC, Moth, Dwarf, Human, Arachnid, Felinid, Oni, Vulpkanin, HumanoidFoxes, Reptilian, Feroxi]
+  speciesRestriction: [IPC, Moth, Dwarf, Human, Arachnid, Felinid, Oni, Vulpkanin, HumanoidFoxes, Reptilian, Feroxi, Tajaran]
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/bishop/bishop_main.rsi
     state: r_arm-primary
@@ -144,7 +147,7 @@
   bodyPart: RHand
   markingCategory: BaseRHand
   kindAllowance: [BasicHumanlike, BasicFurry]
-  speciesRestriction: [IPC, Moth, Dwarf, Human, Arachnid, Felinid, Oni, Vulpkanin, HumanoidFoxes, Reptilian, Feroxi]
+  speciesRestriction: [IPC, Moth, Dwarf, Human, Arachnid, Felinid, Oni, Vulpkanin, HumanoidFoxes, Reptilian, Feroxi, Tajaran]
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/bishop/bishop_main.rsi
     state: r_hand
@@ -154,7 +157,7 @@
   bodyPart: RLeg
   markingCategory: BaseRLeg
   kindAllowance: [BasicHumanlike, BasicFurry]
-  speciesRestriction: [IPC, Moth, Dwarf, Human, Arachnid, Felinid, Oni, Vulpkanin, HumanoidFoxes, Reptilian, Feroxi]
+  speciesRestriction: [IPC, Moth, Dwarf, Human, Arachnid, Felinid, Oni, Vulpkanin, HumanoidFoxes, Reptilian, Feroxi, Tajaran]
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/bishop/bishop_main.rsi
     state: r_leg-primary
@@ -167,7 +170,7 @@
   bodyPart: RFoot
   markingCategory: BaseRFoot
   kindAllowance: [BasicHumanlike, BasicFurry]
-  speciesRestriction: [IPC, Moth, Dwarf, Human, Arachnid, Felinid, Oni, Vulpkanin, HumanoidFoxes, Reptilian, Feroxi]
+  speciesRestriction: [IPC, Moth, Dwarf, Human, Arachnid, Felinid, Oni, Vulpkanin, HumanoidFoxes, Reptilian, Feroxi, Tajaran]
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/bishop/bishop_main.rsi
     state: r_foot
