--- a/Resources/Prototypes/_EinsteinEngines/Entities/Mobs/Customization/hephiastos.yml
+++ b/Resources/Prototypes/_EinsteinEngines/Entities/Mobs/Customization/hephiastos.yml
@@ -53,6 +53,7 @@
   - HumanoidFoxes
   - Reptilian
   - Feroxi # Flooftier
+  - Tajaran # EE
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/hesphiastos/hesphiastos_main.rsi
     state: l_arm-1
@@ -76,6 +77,7 @@
   - HumanoidFoxes
   - Reptilian
   - Feroxi # Flooftier
+  - Tajaran # EE
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/hesphiastos/hesphiastos_main.rsi
     state: l_hand-1
@@ -99,6 +101,7 @@
   - HumanoidFoxes
   - Reptilian
   - Feroxi # Flooftier
+  - Tajaran # EE
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/hesphiastos/hesphiastos_main.rsi
     state: l_leg-1
@@ -123,6 +126,7 @@
   - HumanoidFoxes
   - Reptilian
   - Feroxi # Flooftier
+  - Tajaran # EE
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/hesphiastos/hesphiastos_main.rsi
     state: l_foot-1
@@ -148,6 +152,7 @@
   - HumanoidFoxes
   - Reptilian
   - Feroxi # Flooftier
+  - Tajaran # EE
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/hesphiastos/hesphiastos_main.rsi
     state: r_arm-1
@@ -172,6 +177,7 @@
   - HumanoidFoxes
   - Reptilian
   - Feroxi # Flooftier
+  - Tajaran # EE
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/hesphiastos/hesphiastos_main.rsi
     state: r_hand-1
@@ -196,6 +202,7 @@
   - HumanoidFoxes
   - Reptilian
   - Feroxi # Flooftier
+  - Tajaran # EE
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/hesphiastos/hesphiastos_main.rsi
     state: r_leg-1
@@ -220,6 +227,7 @@
   - HumanoidFoxes
   - Reptilian
   - Feroxi # Flooftier
+  - Tajaran # EE
   sprites:
   - sprite: _EE/Mobs/Species/Cybernetics/hesphiastos/hesphiastos_main.rsi
     state: r_foot-1
