--- a/Resources/Prototypes/XenoArch/effects.yml
+++ b/Resources/Prototypes/XenoArch/effects.yml
@@ -902,7 +902,7 @@
 - type: entity
   id: XenoArtifactAngryCarpSpawn
   parent: BaseXenoArtifactEffect
-  description: Create hostile fish
+  description: Create hostile fauna
   categories: [ HideSpawnMenu ] # Frontier
   components:
   - type: XenoArtifactNode
@@ -919,9 +919,15 @@
       table: !type:GroupSelector
         children:
         - id: MobCarpMagic
-          weight: 1.0
         - id: MobCarpHolo
-          weight: 1.0
+        - id: MobAdultSlimesYellowAngry # Coyote
+        - id: MobAngryBee # Coyote
+        - id: MobBearSpace # Coyote
+        - id: MobXenoRavager # Coyote
+        - id: MobTick # Coyote
+        - id: MobSpiderSpace # Coyote
+        - id: MobPurpleSnake # Coyote
+        - id: MobKangarooSpace # Coyote
 
 - type: entity
   id: XenoArtifactFaunaSpawn
