--- a/Resources/Prototypes/_NF/Guidebook/shipyard.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shipyard.yml
@@ -28,6 +28,8 @@
   - ShipyardCourier
   - ShipyardCrescent
   - ShipyardCrossroads
+  - ShipyardDragoon
+  - ShipyardDragonfly
   - ShipyardDruid
   - ShipyardEagle
   - ShipyardGarden
@@ -190,6 +192,11 @@
   id: ShipyardCrossroads
   name: guide-entry-shipyard-crossroads
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Crossroads.xml"
+
+- type: guideEntry
+  id: ShipyardDragonfly
+  name: guide-entry-shipyard-dragonfly
+  text: "/ServerInfo/_NF/Guidebook/Shipyard/Dragonfly.xml"
 
 - type: guideEntry
   id: ShipyardDruid
