Reverts change to secbelts, gives them default stunbaton instead.

--- a/Resources/Prototypes/Catalog/Fills/Items/belt.yml
+++ b/Resources/Prototypes/Catalog/Fills/Items/belt.yml
@@ -45,7 +45,7 @@
   id: BeltSecurityEntityTable
   table: !type:AllSelector
     children:
-    - id: SecStunbaton # Coyote: Stunbaton<SecStunbaton
+    - id: Stunbaton
     - id: Handcuffs
     - id: Handcuffs
     # - id: HoloprojectorSecurity # Frontier
