found the problem, RSI meta had entries for sprites that didnt exist!

--- a/Resources/Prototypes/_CS/Entities/Markers/Spawners/Random/Food_Drink/donkpocketbox.yml
+++ b/Resources/Prototypes/_CS/Entities/Markers/Spawners/Random/Food_Drink/donkpocketbox.yml
@@ -1,18 +1,18 @@
-- type: entity
-  name: Donkpocket Box Spawner
-  id: DonkpocketBoxSpawner
-  parent: MarkerBase
-  components:
-    - type: Sprite
-      layers:
-        - state: red
-        - sprite: _CS/Objects/Consumable/Food/Baked/donkpocket.rsi
-          state: box
-    - type: RandomSpawner
-      prototypes:
-        - FoodBoxDonkpocketBbq
-        - FoodBoxDonkpocketChocolate
-        - FoodBoxDonkpocketMaple
-        - FoodBoxDonkpocketSupermatter
-      chance: 0.5
-      offset: 0.0
+#- type: entity
+#  name: Donkpocket Box Spawner
+#  id: DonkpocketBoxSpawner
+#  parent: MarkerBase
+#  components:
+#    - type: Sprite
+#      layers:
+#        - state: red
+#        - sprite: _CS/Objects/Consumable/Food/Baked/donkpocket.rsi
+#          state: box
+#    - type: RandomSpawner
+#      prototypes:
+#        - FoodBoxDonkpocketBbq
+#        - FoodBoxDonkpocketChocolate
+#        - FoodBoxDonkpocketMaple
+#        - FoodBoxDonkpocketSupermatter
+#      chance: 0.5
+#      offset: 0.0
