--- a/Resources/Prototypes/_CS/Entities/Objects/Consumables/Food/Baked/donkpocket.yml
+++ b/Resources/Prototypes/_CS/Entities/Objects/Consumables/Food/Baked/donkpocket.yml
@@ -115,6 +115,7 @@
         - ReagentId: Omnizine
           Quantity: 2
   - type: Sprite
+    sprite: _CS/Objects/Consumable/Food/Baked/donkpocket.rsi
     state: maple
 
 - type: entity
