--- a/Resources/Prototypes/_COYOTE/Entities/Objects/Misc/identification_cards.yml
+++ b/Resources/Prototypes/_COYOTE/Entities/Objects/Misc/identification_cards.yml
@@ -19,6 +19,7 @@
     - state: idpilot # Frontier: idpassenger<idcontractor
       sprite: _NF/Objects/Misc/id_cards.rsi # Frontier
   - type: AgentIDCard
+    allowAccessCopying: false
   - type: ActivatableUI
     key: enum.AgentIDCardUiKey.Key
     inHandsOnly: true
