refactored IPC topicals & added to merc lathe

--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -301,6 +301,7 @@
     - NfsdPracticeStatic
     - NFMercenaryMagazineStatic
     - NFTopicalsStatic
+    - CSIPCTopicalsStatic
     - NFMercenaryArchetypeStatic
 
   - type: BlueprintReceiver
