--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -361,7 +361,7 @@
     - RoboticsStatic
     - BorgModulesStatic
     - BorgLimbsStatic
-    - CSIPCStatic # Coyote - IPC Topicals
+    - CSIPCTopicalsStatic # Coyote - IPC Topicals
     dynamicPacks:
     - Robotics
     - BorgModules
@@ -559,7 +559,7 @@
     - NFTopicalsStatic # Frontier
     - NFMedicalArchetypeStatic # Frontier
     - AACTableStatic # DeltaV - AAC Tablets
-    - CSIPCStatic # Coyote - IPC Topicals
+    - CSIPCTopicalsStatic # Coyote - IPC Topicals
     # dynamicPacks: # Frontier
     # - Chemistry # Frontier
   - type: Machine
