--- a/Resources/Prototypes/_NF/Roles/Jobs/Medical/doc.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Medical/doc.yml
@@ -9,6 +9,10 @@
     - !type:RoleTimeRequirement
       role: JobSecretary
       time: 72000
+  overrideRequirement:
+  - !type:RoleTimeRequirement
+    role: JobDirectorOfCare
+    time: 600 # 10 minutes to requalify
   startingGear: DocGear
   alwaysUseSpawner: true
   icon: "JobIconDoc"
