fixed atmos issue

--- a/Resources/Maps/_CS/Shuttles/Expedition/gourd.yml
+++ b/Resources/Maps/_CS/Shuttles/Expedition/gourd.yml
@@ -4,7 +4,7 @@ meta:
   engineVersion: 261.2.0
   forkId: ""
   forkVersion: ""
-  time: 01/17/2026 03:27:27
+  time: 01/23/2026 15:30:58
   entityCount: 1998
 maps: []
 grids:
@@ -1098,11 +1098,11 @@ entities:
           0,1:
             0: 49136
           -1,1:
-            0: 45040
+            0: 49136
           0,2:
             0: 65323
           -1,2:
-            0: 65418
+            0: 65419
           0,3:
             0: 65535
           -1,3:
@@ -1112,9 +1112,9 @@ entities:
           1,0:
             0: 61167
           1,1:
-            0: 10230
+            0: 14326
           1,2:
-            0: 32706
+            0: 32707
           1,3:
             0: 65399
           1,4:
@@ -1260,8 +1260,8 @@ entities:
           1,7:
             1: 18
           2,5:
-            1: 17479
-            0: 4912
+            0: 4913
+            1: 17478
           2,6:
             1: 18
           -3,5:
@@ -1508,7 +1508,7 @@ entities:
       pos: 6.5,-3.5
       parent: 1
     - type: Door
-      secondsUntilStateChange: -7139.863
+      secondsUntilStateChange: -7209.697
       state: Opening
     - type: DeviceLinkSource
       lastSignals:
@@ -6664,7 +6664,7 @@ entities:
       pos: -2.5,7.5
       parent: 1
     - type: Door
-      secondsUntilStateChange: -3346.5554
+      secondsUntilStateChange: -3416.3894
       state: Opening
   - uid: 809
     components:
@@ -6672,7 +6672,7 @@ entities:
       pos: 5.5,7.5
       parent: 1
     - type: Door
-      secondsUntilStateChange: -3349.7888
+      secondsUntilStateChange: -3419.6228
       state: Opening
   - uid: 810
     components:
@@ -6680,7 +6680,7 @@ entities:
       pos: 4.5,7.5
       parent: 1
     - type: Door
-      secondsUntilStateChange: -3349.022
+      secondsUntilStateChange: -3418.856
       state: Opening
   - uid: 811
     components:
@@ -6688,7 +6688,7 @@ entities:
       pos: 3.5,7.5
       parent: 1
     - type: Door
-      secondsUntilStateChange: -3347.8887
+      secondsUntilStateChange: -3417.7227
       state: Opening
   - uid: 812
     components:
@@ -6696,7 +6696,7 @@ entities:
       pos: -4.5,7.5
       parent: 1
     - type: Door
-      secondsUntilStateChange: -3344.8555
+      secondsUntilStateChange: -3414.6895
       state: Opening
   - uid: 813
     components:
@@ -6704,7 +6704,7 @@ entities:
       pos: -3.5,7.5
       parent: 1
     - type: Door
-      secondsUntilStateChange: -3345.9553
+      secondsUntilStateChange: -3415.7893
       state: Opening
 - proto: DefibrillatorCabinetFilled
   entities:
@@ -7549,7 +7549,7 @@ entities:
       parent: 1
 - proto: DVSmartFridge
   entities:
-  - uid: 1729
+  - uid: 959
     components:
     - type: Transform
       pos: -6.5,23.5
@@ -12254,6 +12254,9 @@ entities:
         14:
         - - Pressed
           - DoorBolt
+        12:
+        - - Pressed
+          - DoorBolt
 - proto: SignBar
   entities:
   - uid: 1602
@@ -13106,7 +13109,7 @@ entities:
       parent: 1
 - proto: VendingMachineBooze
   entities:
-  - uid: 959
+  - uid: 1729
     components:
     - type: Transform
       pos: -2.5,20.5
