re-adds monolith paper buckets to the service lathe

--- a/Resources/Prototypes/_NF/Recipes/Lathes/Packs/service.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/Packs/service.yml
@@ -74,6 +74,7 @@
   - FoodCondimentSqueezeBottleClear
   - FoodFrozenPopsicleTrash
   - DrinkWaterCup
+  - BucketPaper # Mono
   - DrinkDisposableCup #imp
   - FreezerElectronics
   - Syringe
