Buying a camera bug actually gives you a camera bug now

--- a/Resources/Prototypes/_COYOTE/Catalog/pirate_uplink_catalog.yml
+++ b/Resources/Prototypes/_COYOTE/Catalog/pirate_uplink_catalog.yml
@@ -445,7 +445,7 @@
   id: UplinkFreelancerCameraBug
   name: uplink-cameraBug-name
   description: uplink-cameraBug-desc
-  productEntity: RadioJammer
+  productEntity: CameraBug
   cost:
     Doubloon: 12
   categories:
