Revert "Merge pull request #179 from Julkson/Julkson_PR0001_Mochi"
This reverts commit 3b075701304fdfd20d9a60ae2140bb395bac990e, reversing
changes made to 2ad9b70e10ec57e054cee80330dd8b5a1ad7e310.

--- a/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
@@ -962,9 +962,8 @@
   result: FoodRiceNoodlesSheet
   time: 15
   group: Pasta
-  solids:
-    FoodRiceDough: 1
   reagents:
+    Rice: 45
     TableSalt: 10
     Cornoil: 10
   recipeType: Assembler
