--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/Items/hydroponics_tables.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/Items/hydroponics_tables.yml
@@ -128,7 +128,7 @@
       - id: ExtradimensionalOrangeSeeds
       - id: GlasstleSeeds
       - id: MonkananaSeeds
-      - id: GatFruitSeeds # Coyote
+      - id: GatfruitSeeds # Coyote
       - id: BreedShroomSeeds # Coyote
 
 # region Cemicals
