--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/Items/medical_tables.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/Items/medical_tables.yml
@@ -503,7 +503,7 @@
       - id: PunctAutoInjector
       - id: LacerAutoInjector
       - id: PyraAutoInjector
-      - id: EphedrineAutoInjector
+      #- id: EphedrineAutoInjector # Coyote: Not yet implemented
       - id: PolyAutoInjector
     # Rare (either good or undesirable)
     - !type:GroupSelector
