Add baristavend restock to tables

--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/Items/general_tables.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/Items/general_tables.yml
@@ -858,6 +858,7 @@
     - id: VendingMachineRestockNonLethalVend
     - id: VendingMachineRestockAutoTuneVend
     - id: VendingMachineRestockPottedPlantVend
+    - id: VendingMachineRestockBarista # Coyote: Since we added the barista vend, add the restock too!
 
 - type: entityTable
   id: TableDungeonLootGeneralCanisterBroken
